--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==3.2.16
+Django==3.2.25
 pep8-naming==0.13.3
 pytest==7.1.3
 pytest-django==4.5.2
 pytest-pythonpath==0.7.3
 flake8==5.0.4
 flake8-docstrings==1.7.0
+black==23.12.1
